# perceptographic

./: .gitignore  LICENSE  README.md  ajtai.py  cyclic_groups.py  example.py  main.py  old.py  pedersen.py  probability_test.py  pyproject.toml  reed_solomon.py  requirements.txt
docs/source/: conf.py  index.rst
experiments/: compression.py  load_tinyimagenet.py  sample_test.py  uniformity.py
perceptographic/: __init__.py  common.py  perceptographic.py
perceptographic/data/: log_threshold.msgpack
perceptographic/perceptual/: __init__.py  image.py  pdq.py  perceptual.py  phash.py
perceptographic/pph/: __init__.py  blv19.py  hcrhf.py  log_threshold.py  nonrobust.py  polynomial.py  pph.py
src/: perceptographic.py
src/perceptual/: __init__.py  pdq.py  perceptual.py  phash.py
src/pph/: __init__.py  common.py  hltw22.py  nonrobust.py  pph.py  temp-nonrobust.py
tests/: average_hash_calculator.py  file_writer.py  load_tinyimagenet.py  sample_test.py  test_log_threshold.py  test_pedersen.py  test_pph.py  test_types.py
