# pyproject.toml
[project]
name = "perceptographic"
version = "0.1.0"
description = "Adversarially robust perceptual hashing"
authors = [{ name="Sam Buxbaum", email="sambuxbaum01@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["perceptographic"]